<resources>
    <string name="app_name" translatable="false">Vikings</string>
    <string name="melhores_amigos">Best friends</string>
    <string name="athelstan" translatable="false">Athelstan</string>
    <string name="ragnar" translatable="false">Ragnar Lothbrok</string>
    <string name="bjorn" translatable="false">Bjorn Ironside</string>
    <string name="lagertha" translatable="false">Lagertha</string>
    <string name="floki" translatable="false">Floki</string>
    <string name="rollo" translatable="false">Rollo</string>
    <string name="navegacao">You arrived at this character through the character</string>
    <string name="athelstan_descricao">Athelstan was a young Anglo-Saxon, once a Christian monk taken as a slave by Ragnar Lothbrok and his fellow Vikings from the Lindisfarne monastery. Athelstan was brought in to live in Viking society and struggles to maintain his beliefs in an environment very different from his home across the sea. Torn between maintaining his beliefs and surviving in his new and cruel world, Athelstan began to doubt his faith in the Christian God. Despite Athelstan\'s worldliness - extensive language skills, logical mind, knowledge of the Bible, etc. - he was hopelessly innocent when dealing with other people, especially ambitious ones. Despite his intelligence, or perhaps because of it, he found himself torn between his ancient religious beliefs and cultural traditions and those to which he was exposed during his time with the Vikings.</string>
    <string name="bjorn_descricao">Björn Ragnarsson or Bjorn Ironside is the king of Kattegat. He is the son of Ragnar and Lagertha and the eldest of Ragnar\'s many children. Although it is later revealed that his uncle Rollo may be his biological father, Björn believes he is Ragnar\'s son. He is the husband of Gunnhild (pagan army), he was Torvi\'s third ex-husband and father of Torvi\'s only living son: Asa. Bjorn is Ragnar\'s heir in Kattegat. Intelligent and determined, Bjorn loves and admires his father above all men. Following in Ragnar\'s footsteps, Bjorn wants to test himself both as a fighter and as an explorer. After fighting in battle without receiving a wound or scratch, he earned the famous nickname Bjorn Ironside. At the end of season 5, with the help of King Harald Finehair, King Olaf and his younger half-brother, Hvitserk Bjorn, overthrow their younger and evil half-brother Ivar and become king of Kattegat.</string>
    <string name="floki_descricao">Floki Vilgerðarson is a boat builder and incorrigible cheater, who is also the eccentric and eccentric friend of Ragnar Lothbrok. Committed to helping Ragnar navigate westward, he secretly designs and builds a new generation of Viking boats for his westward journey across the ocean. He is also the wife of the late Helga, the father of the late Angrboda and the adoptive father of the late Tanaruz. Floki typifies a neurotic person with a highly balanced personality. Possessing reasonable fear and a vast intellect, he is able to easily build ships with special characteristics and wisely does not remain as immune as Ragnar. Instead, he always remains a student of the world around him and is always attentive, as he should be. His tendency to have bad nerves and react angrily because of insecurity about his feats as a fighter and his status among other Vikings, however, prevent him from gaining more confidence from Ragnar to better guide him. In Viking society, being so old and unhappy, knowledge is the second of battle madness in a man, and is only proposed for battle, and the virtues of knowledge go hand in hand with the fact that Odin is brave and fierce granted by Odin were silenced by politicians and other arrogant and showy men.</string>
    <string name="lagherta_descricao">Lagertha was the first and ex-wife of Ragnar Lothbrok and the former Queen of Kattegat. Lagertha was an Earl, and a fierce shield-maiden. She fought in the shield-wall alongside the men.  Since the loss of her daughter Gyda and her unborn child with Ragnar, Lagertha realized that Freyja\'s fertility is meant for another, and that it is the goddess\' warrior aspect that speaks to her fellow Valkyrie. Lagertha remained fiercely independent when it came to protecting her family—and the throne, before being overthrown by Ivar, the youngest son of Ragnar with his second wife Aslaug who swears revenge on Lagertha for murdering his mother. She is later killed by a drunk Hvitserk, who mistakes her for Ivar in a form of a snake.</string>
    <string name="ragnar_descricao">Ragnar Sigurdsson, popularly known as Ragnar Lothbrok, (Shaggy Breeches) was the main protagonist of the Vikings until his death in the second part of the fourth season. Ragnar was a restless warrior and former king of Kattegat. He claimed to be an ancestor of the Norse god Odin - the god of dead warriors, but also the god of eternity curiosity. He was the father of Gyda and Bjorn with his first and ex-wife Lagertha and father of Ubbe, Hvitserk, Sigurd and Ivar with his second wife Aslaug. He was Rollo\'s younger brother.</string>
    <string name="rollo_descricao">Rollo of Normandy, also known as Rollo Sigurdsson and Rolf, is the older brother of Ragnar Lothbrok and the Duke of Normandy. He is the husband of Princess Frank Gisla and father of William, Marcellus and Celsa. Before his marriage, Rollo was considered a fearsome Viking warrior, with an impulsive streak and forged by infighting.</string>
</resources>
